--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 <div>
 <ul data-role="listview" data-theme="b" class="ui-listview ui-group-theme-b">
 <li class="ui-first-child ui-last-child">
-<a href="K:/Git/app8-git/app8a-git/index4.html" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
+<a href="index4.html" target="_self" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>Aplicación Cuatro</h2>
 <p>Muestra algunos datos del dispositivo.</p>
 </a>
 </li>
 <li class="ui-first-child ui-last-child">
-<a href="K:/Git/app8-git/app8a-git/index5.html" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
+<a href="index5.html" target="_self" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>Aplicación Cinco</h2>
 <p>Hace beepear y Vibrar el dispositivo.</p>
 </a>
 </li>
 <li class="ui-first-child ui-last-child">
-<a href="K:/Git/app8-git/app8a-git/index7.html" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
+<a href="index7.html" target="_self" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>Aplicación Siete</h2>
 <p>Muestra el funcionamiento del Swipe.</p>
   </a>
